[gd_scene load_steps=21 format=3 uid="uid://blre7nbnddapj"]

[ext_resource type="Texture2D" uid="uid://c5ipy57ikn0bw" path="res://assets/sprite_enemies/boss_1/boss_1_components.png" id="1_8yqkq"]
[ext_resource type="Script" path="res://scenes/bosses/sideparts/sidepart.gd" id="1_kgw0x"]
[ext_resource type="PackedScene" uid="uid://s0uqul2uakbe" path="res://scenes/bosses/sideparts/sidepart_hurtbox.tscn" id="2_vqc4y"]
[ext_resource type="Resource" uid="uid://b3p1puamygwo8" path="res://scenes/bosses/sideparts/sidepart_orb_stats.tres" id="2_xnkvt"]
[ext_resource type="Material" uid="uid://bs34yeolna80o" path="res://scenes/bosses/sideparts/construction_shader_material.tres" id="3_0nv40"]
[ext_resource type="Script" path="res://scenes/bosses/sideparts/sidepart_boss1_health.gd" id="3_cqlxw"]
[ext_resource type="Texture2D" uid="uid://8xtemsicre7s" path="res://assets/sprite_enemies/boss_1/boss_1_construction.png" id="3_oluvy"]
[ext_resource type="Resource" uid="uid://dcu6q2sy4u3fj" path="res://resources/debuffs/crystalize/crystalized.tres" id="4_tkghs"]
[ext_resource type="Resource" uid="uid://c1kncqtjwfxj" path="res://resources/debuffs/superconduct/superconduct.tres" id="5_2hrs6"]
[ext_resource type="Material" uid="uid://d3ixmweu08c8k" path="res://scenes/bosses/sideparts/main_shader_material.tres" id="5_kr7ty"]
[ext_resource type="PackedScene" uid="uid://dgxe7byv8tjvu" path="res://scenes/bosses/sideparts/sidepart_healthbar.tscn" id="6_3r43b"]
[ext_resource type="AudioStream" uid="uid://dl7jjtk1psmvx" path="res://assets/audio/sfx/enemy_explosion.mp3" id="6_8hpef"]
[ext_resource type="PackedScene" uid="uid://c1mef3esxg5jh" path="res://user_interface/UI_attached_to_enemies/element_indicator.tscn" id="7_v8lse"]
[ext_resource type="PackedScene" uid="uid://oml2t17eroh7" path="res://user_interface/UI_attached_to_enemies/debuff_indicator.tscn" id="8_ljwfb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4hhl1"]
atlas = ExtResource("3_oluvy")
region = Rect2(24, 0, 80, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ilgp"]
atlas = ExtResource("1_8yqkq")
region = Rect2(24, 0, 80, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ay7oc"]
size = Vector2(80, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt1w1"]
size = Vector2(21, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jeu53"]
size = Vector2(76, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ofn6"]
size = Vector2(94, 48)

[node name="OrbTop" type="StaticBody2D"]
position = Vector2(-15, -28)
collision_layer = 512
collision_mask = 0
script = ExtResource("1_kgw0x")
stats = ExtResource("2_xnkvt")
impact_scale = Vector2(6, 6)

[node name="Sprite2D_construction" type="Sprite2D" parent="."]
material = ExtResource("3_0nv40")
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_4hhl1")

[node name="Sprite2D_main" type="Sprite2D" parent="."]
material = ExtResource("5_kr7ty")
scale = Vector2(2, 2)
texture = SubResource("AtlasTexture_4ilgp")

[node name="BossHurtbox" parent="." instance=ExtResource("2_vqc4y")]
position = Vector2(0, -2)
detectable_by_autoaim = false

[node name="Main" type="CollisionShape2D" parent="BossHurtbox"]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_ay7oc")

[node name="Left" type="CollisionShape2D" parent="BossHurtbox"]
position = Vector2(-50.5, -2.5)
shape = SubResource("RectangleShape2D_dt1w1")

[node name="Right" type="CollisionShape2D" parent="BossHurtbox"]
position = Vector2(51, -1)
shape = SubResource("RectangleShape2D_dt1w1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_jeu53")
debug_color = Color(0.828275, 0.363511, 0.416475, 0.42)

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_cqlxw")
enemy_explosion_sfx = ExtResource("6_8hpef")
crystalize_effect = ExtResource("4_tkghs")
superconduct_effect = ExtResource("5_2hrs6")

[node name="Healthbar" parent="HealthComponent" instance=ExtResource("6_3r43b")]
offset_left = -32.0
offset_top = -57.0
offset_right = 32.0
offset_bottom = -52.0

[node name="Box" type="HBoxContainer" parent="HealthComponent"]
offset_left = -32.0
offset_top = -49.0
offset_right = 3.0
offset_bottom = -40.0
theme_override_constants/separation = 1

[node name="element_indicator" parent="HealthComponent/Box" instance=ExtResource("7_v8lse")]
layout_mode = 2

[node name="debuff_indicator" parent="HealthComponent/Box" instance=ExtResource("8_ljwfb")]
layout_mode = 2

[node name="ReviveCheck" type="Timer" parent="."]
wait_time = 0.5

[node name="PlayerCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(1, -7)
shape = SubResource("RectangleShape2D_1ofn6")
debug_color = Color(0.606793, 0.501625, 0.552073, 0.42)
